adding in csproj location to restore/test

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         dotnet-version: 3.1.301
     - name: Install dependencies
-      run: dotnet restore
+      run: dotnet restore  "./Calling/Calling.csproj"
     - name: Build
       run: dotnet build "./Calling/Calling.csproj" --configuration Release --no-restore
     - name: Test
-      run: dotnet test --no-restore --verbosity normal
+      run: dotnet test  "./Calling/Calling.csproj" --no-restore --verbosity normal
