--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -18,13 +18,13 @@ jobs:
     - name: Build
       run: |
           tag=$(git describe --tags --abbrev=0)
-          release_name="App-$tag-${{ matrix.target }}"
+          release_name="App-$tag-win-x64"
           dotnet publish --no-restore -c Release -o "$release_name"
     - name: Test
       run: dotnet test --no-restore --verbosity normal
   release:
     name: Release
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
@@ -41,7 +41,7 @@ jobs:
           release_name="Calling-$tag"
 
           # Build everything
-          dotnet publish Calling/Calling.csproj --framework netcoreapp3.1 --runtime "win-x64 -c Release -o "$release_name"
+          dotnet publish --framework netcoreapp3.1 --runtime "win-x64 -c Release -o "$release_name"
 
           7z a -tzip "${release_name}.zip" "./${release_name}/*"
 
