hopefully quotations are fixed

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build
         shell: bash
         run: |
-          tag="testTag"
+          tag="testtest"
           release_name="Calling-$tag"
 
           # Build everything
