i dont think i need quotations here at all

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Build
         shell: bash
         run: |
-          tag="testtest"
+          tag=TestTest
           release_name="Calling-$tag"
 
           # Build everything
