--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -33,7 +33,10 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: 3.1.101
-
+      - name: where are we
+        run: pwd
+      - name: list some key files
+        run: ls -lrt
       - name: Build
         shell: bash
         run: |
