--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -26,7 +26,7 @@ jobs:
           release_name=Calling-$tag
           unset CI
           # Build everything
-          dotnet publish ./Calling -c Release
+          dotnet publish ./Calling -c Release -o "$release_name"
 
           7z a -tzip "${release_name}.zip" "./${release_name}/*"
 
