Add deploy button (#2)
* adding deploy button

* add raw url to deploy file

* forgot closing brace

* adding default random names for plan + acs resource name

* testing out random variables

* addiung serviceName variable

* pushing changes

* test changes

* removing unused parameters

* testing

* moving parameters into variables

* fixing casing

* copying key

* update version of communications when copying key

* validate if copy was bad

* trying reference usage isntead

* accessing keys through properties

* simplifying script

* removing configuration value

* reverting changes

* updating to get keys

* TEST

* Add or update the App Service deployment workflow configuration from Azure Portal.

* modifying location of button

* trying out suggested changes

* updating sourceControls resource

* 1

* putting back in appsettings change

* adding in source controls sub resource

* removing concat

* trying out how to deploy azure app service

* trying out language tempalte

* forcing installing react-scripts for start + build

* Add or update the App Service deployment workflow configuration from Azure Portal.

* moving typescript to build dependencies

* adding typescript

* removing github flows

* moving prettier to depednencies from dev

* trying to deploy source from github

* moving back to original deploy script

* seeing if having a correct branch will help

* updating node version in app service

* trying to consolidate azure deploy script

* Update README.md

* updating azure deploy script in branch

* updating readme to use deploy script

* putting in correct encoded url

* trying  to make appsettings a dependency of sourcecontrolws

* fixing appsettings resource id target

* adding in app name parameter

* fixing web app name

* trying out using webdeploy

* trying to use exactly what is used in the samples

* removing extra msdeploy

* push

--- a/Calling/ClientApp/package.json
+++ b/Calling/ClientApp/package.json
@@ -19,6 +19,7 @@
     "merge": "^1.2.1",
     "node-forge": "0.10.0",
     "oidc-client": "^1.9.0",
+    "prettier": "2.0.5",
     "preval.macro": "^5.0.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
@@ -31,28 +32,27 @@
     "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^2.5.0",
+    "typescript": "^3.7.5",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "typescript": "^3.7.5",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
-    "nan": "^2.14.1",
-    "prettier": "2.0.5"
+    "nan": "^2.14.1"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm install typescript -g && npm install react-scripts -g && rimraf ./build && react-scripts start",
+    "build": "npm install typescript -g && npm install react-scripts -g && react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prettier": "prettier --write --config .prettierrc **/*.js **/*.ts",
