--- a/Calling/ClientApp/package.json
+++ b/Calling/ClientApp/package.json
@@ -15,13 +15,13 @@
     "@types/react-redux": "^7.1.9",
     "@types/uuid": "^8.3.0",
     "bootstrap": "^4.1.3",
-    "immer": ">=8.0.1",
-    "ini": ">=1.3.6",
+    "immer": "^8.0.1",
+    "ini": "^1.3.6",
     "jquery": "^3.5.1",
     "merge": "^1.2.1",
     "node-forge": "0.10.0",
-    "node-notifier": ">=8.0.1",
-    "object-path": ">=0.11.5",
+    "node-notifier": "^8.0.1",
+    "object-path": "^0.11.5",
     "oidc-client": "^1.9.0",
     "preval.macro": "^5.0.0",
     "react": "^16.8.0",
