--- a/Calling/ClientApp/package.json
+++ b/Calling/ClientApp/package.json
@@ -36,15 +36,16 @@
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "typescript": "^3.7.5",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "nan": "^2.14.1",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "typescript": "^3.7.5"
   },
   "eslintConfig": {
     "extends": "react-app"
