--- a/Calling/ClientApp/package.json
+++ b/Calling/ClientApp/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@azure/communication-calling": "1.0.0-beta.4",
     "@azure/communication-common": "1.0.0-beta.4",
+    "@azure/communication-identity": "1.0.0-beta.4",
     "@fluentui/react": "^7.117.1",
     "@fluentui/react-icons-northstar": "^0.51.0",
     "@fluentui/react-northstar": "^0.51.0",
