--- a/Calling/ClientApp/package.json
+++ b/Calling/ClientApp/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "description": "This is a sample application to show how the ACS Calling Web SDK can be used to build a group calling experience. The client-side application is a React based user interface which uses Redux for handling complex state while leveraging Microsoft Fluent UI for how things look. Powering this front-end is a C# web application powered by ASP.net Core to connect this application with Azure.",
   "dependencies": {
-    "@azure/communication-calling": "1.0.0-beta.1",
-    "@azure/communication-common": "1.0.0-beta.1",
+    "@azure/communication-calling": "1.0.0-beta.6",
+    "@azure/communication-common": "1.0.0-beta.4",
+    "@azure/communication-identity": "1.0.0-beta.4",
     "@fluentui/react": "^7.117.1",
     "@fluentui/react-icons-northstar": "^0.51.0",
     "@fluentui/react-northstar": "^0.51.0",
@@ -36,15 +37,16 @@
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "typescript": "^3.7.5",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
     "nan": "^2.14.1",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "typescript": "^3.7.5"
   },
   "eslintConfig": {
     "extends": "react-app"
