upgraded to beta6

--- a/Calling/ClientApp/package.json
+++ b/Calling/ClientApp/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "^3.4.3",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^2.5.0",
