--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ bld/
 [Ll]og/
 [Ll]ogs/
 
+# Production build artifacts when deploying the frontend.
+Calling/ClientApp/build
+
 # Visual Studio 2015/2017 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
@@ -181,6 +184,7 @@ publish/
 # checkin your Azure Web App publish settings, but sensitive information contained
 # in these scripts will be unencrypted
 PublishScripts/
+profile.arm.json
 
 # NuGet Packages
 *.nupkg
