Temporarily ignore react/display-name errors
There are many instances of this lint error.

Ignore this temporarily so we can get CI coverage for the rest.

--- a/Calling/ClientApp/package.json
+++ b/Calling/ClientApp/package.json
@@ -52,7 +52,10 @@
     "typescript": "^3.9.7"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "react/display-name": 0
+    }
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
