--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,4 +56,4 @@ jobs:
 
       - name: Check all is pretty
         working-directory: ./Calling/ClientApp
-        run: npx prettier -c .
+        run: npx prettier -c --config .prettierrc **/*.js **/*.ts .
