updating ci steps

--- a/Calling/ClientApp/package.json
+++ b/Calling/ClientApp/package.json
@@ -65,8 +65,9 @@
     "eject": "react-scripts eject",
     "prettier": "prettier --write --config .prettierrc **/*.js **/*.ts",
     "prettier:check": "prettier --check --config .prettierrc **/*.js **/*.ts",
-    "lint": "eslint */**/*.{ts,tsx} && echo Lint completed.",
-    "lint:quiet": "eslint */**/*.{ts,tsx} --quiet && echo Lint completed."
+    "prettier:version": "prettier --version",
+    "lint": "eslint -c package.json */**/*.{ts,tsx} && echo Lint completed.",
+    "lint:quiet": "eslint -c package.json */**/*.{ts,tsx} --quiet && echo Lint completed."
   },
   "browserslist": {
     "production": [
