--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,8 +52,8 @@ jobs:
 
       - name: Lint
         working-directory: ./Calling/ClientApp
-        run: npm run lint .
+        run: npm run lint
 
       - name: Check all is pretty
         working-directory: ./Calling/ClientApp
-        run: npm run prettier:check .
+        run: npm run prettier:check
