applying warning fixes (#56)
Co-authored-by: ddematheu2 <43075365+ddematheu2@users.noreply.github.com>

--- a/Calling/ClientApp/package.json
+++ b/Calling/ClientApp/package.json
@@ -63,8 +63,8 @@
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "prettier": "prettier --write --config .prettierrc **/*.js **/*.ts",
-    "prettier:check": "prettier --check --config .prettierrc **/*.js **/*.ts",
+    "prettier": "prettier --write --config .prettierrc **/*.js **/*.ts **/*.tsx",
+    "prettier:check": "prettier --check --config .prettierrc **/*.js **/*.ts **/*.tsx",
     "lint": "eslint -c package.json */**/*.{ts,tsx} && echo Lint completed.",
     "lint:quiet": "eslint -c package.json */**/*.{ts,tsx} --quiet && echo Lint completed."
   },
