Changes for adding recordng start/stop feature for Group calling hero sample

--- a/Calling/appsettings.json
+++ b/Calling/appsettings.json
@@ -1,11 +1,17 @@
 {
   "Logging": {
-      "LogLevel": {
-          "Default": "Trace",
-          "System": "Information",
-          "Microsoft": "Information"
-      }
+    "LogLevel": {
+      "Default": "Trace",
+      "System": "Information",
+      "Microsoft": "Information"
+    }
   },
   "AllowedHosts": "*",
-  "ResourceConnectionString": "REPLACE_WITH_CONNECTION_STRING"
+  "ResourceConnectionString": "REPLACE_WITH_CONNECTION_STRING",
+  "CallbackUri": "http://localhost:3000/",
+  "AccessKey": "REPLACE_WITH_ACCESS_KEY",
+  "DownloadUri": "REAPLCE_WITH_RECORDING_DOWNLOAD_URI",
+  "ApiVersion": "api-version=2021-04-15-preview1",
+  "BlobStorageConnectionString": "REPLACE_STORAGE_CONNECTION_STRING",
+  "ContainerName": "REPLACE_WITH_BLOB_CONTAINER_NAME"
 }
