--- a/Calling/ClientApp/package.json
+++ b/Calling/ClientApp/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "description": "This is a sample application to show how the Azure Communication Services Calling Web SDK can be used to build a group calling experience. The client-side application is a React based user interface which uses Redux for handling complex state while leveraging Microsoft Fluent UI for how things look. Powering this front-end is a C# web application powered by ASP.net Core to connect this application with Azure.",
   "dependencies": {
-    "@azure/communication-calling": "1.0.0",
-    "@azure/communication-common": "1.0.0",
+    "@azure/communication-calling": "^1.1.0-beta.1",
+    "@azure/communication-common": "^1.0.0",
     "@azure/communication-identity": "1.0.0",
     "@fluentui/react": "^7.166.2",
     "@fluentui/react-icons-northstar": "^0.51.7",
