--- a/Calling/Calling.csproj
+++ b/Calling/Calling.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Communication.CallingServer" Version="1.0.0-beta.1" />
+    <PackageReference Include="Azure.Communication.CallingServer" Version="1.0.0-alpha.20210607.2" />
     <PackageReference Include="Azure.Communication.Identity" Version="1.0.1" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.9.0-beta.1" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.8" />
