Add a BRB feedback button to the sample app

--- a/Calling/appsettings.json
+++ b/Calling/appsettings.json
@@ -7,5 +7,7 @@
       }
   },
   "AllowedHosts": "*",
-  "ResourceConnectionString": "REPLACE_WITH_CONNECTION_STRING"
+  "ResourceConnectionString": "REPLACE_WITH_CONNECTION_STRING",
+  "LogBlobSasUri": "REPLACE_WITH_BLOB_SAS_URI",
+  "LogBlobContainerName": "REPLACE_WITH_BLOB_CONTAINER_NAME"
 }
