Add a feature flag for BRB

--- a/Calling/appsettings.json
+++ b/Calling/appsettings.json
@@ -8,6 +8,7 @@
     },
     "AllowedHosts": "*",
     "ResourceConnectionString": "REPLACE_WITH_CONNECTION_STRING",
+    "IsFeedbackEnabled": false,
     "LogBlobSasUri": "REPLACE_WITH_BLOB_SAS_URI",
     "LogBlobContainerName": "REPLACE_WITH_CONTAINER_NAME"
 }
