Changes for 1. Increase recording option button width 2. Change in recording download API 3. Updated beta SDK version 4. Flag for recording options

--- a/Calling/Calling.csproj
+++ b/Calling/Calling.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Communication.CallingServer" Version="1.0.0-alpha.20210615.5" />
+    <PackageReference Include="Azure.Communication.CallingServer" Version="1.0.0-beta.1" />
     <PackageReference Include="Azure.Communication.Identity" Version="1.0.1" />
     <PackageReference Include="Azure.Storage.Blobs" Version="12.9.0-beta.1" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.6" />
