--- a/Calling/appsettings.json
+++ b/Calling/appsettings.json
@@ -9,9 +9,10 @@
   "AllowedHosts": "*",
   "ResourceConnectionString": "REPLACE_WITH_CONNECTION_STRING",
   "IsFeedbackEnabled": false,
+  "IsRecordingEnabled": true,
   "LogBlobSasUri": "REPLACE_WITH_BLOB_SAS_URI",
   "LogBlobContainerName": "REPLACE_WITH_CONTAINER_NAME",
   "CallbackUri": "http://localhost:3000/",
-  "BlobStorageConnectionString": "REPLACE_WITH_STORAGE_CONNECTION_STRING",
-  "ContainerName": "REPLACE_WITH_BLOB_CONTAINER_NAME"
+  "RecordingBlobStorageConnectionString": "REPLACE_WITH_RECORDING_STORAGE_CONNECTION_STRING",
+  "RecordingContainerName": "REPLACE_WITH_RECORDING_BLOB_CONTAINER_NAME"
 }
