--- a/Calling/ClientApp/package.json
+++ b/Calling/ClientApp/package.json
@@ -63,8 +63,8 @@
     "eject": "react-scripts eject",
     "prettier": "prettier --write --config .prettierrc **/*.js **/*.ts",
     "prettier:check": "prettier --check --config .prettierrc **/*.js **/*.ts",
-    "lint": "eslint */**/*.{ts,tsx} && echo Lint completed.",
-    "lint:quiet": "eslint */**/*.{ts,tsx} --quiet && echo Lint completed."
+    "lint": "eslint */**/*.{ts,tsx} --max-warnings 100 && echo Lint completed.",
+    "lint:quiet": "eslint */**/*.{ts,tsx} --max-warnings 100 --quiet && echo Lint completed."
   },
   "browserslist": {
     "production": [
