updating CI and deploy scripts

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @alkwa-msft @jamesburnside @anjulgarg @PorterNan @mgamis-msft @alcail @prprabhu-ms
+* @alkwa-msft @jamesburnside @anjulgarg @PorterNan @mgamis-msft @prprabhu-ms @carocao-msft @dmceachernmsft
