--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,8 @@ jobs:
           node-version: '14'
 
       - name: Install (dev) dependencies
-        working-directory: ./Calling/ClientApp
-        run: npm install
+        working-directory: ./
+        run: npm run setup
 
       - name: Lint
         working-directory: ./Calling/ClientApp
@@ -57,3 +57,7 @@ jobs:
       - name: Check all is pretty
         working-directory: ./Calling/ClientApp
         run: npm run prettier:check
+
+      - name: Build
+        working-directory: ./
+        run: npm run build
