--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "setup": "cd Server && npm install && cd ../Calling && npm install && cd ..",
     "start": "cd Calling && npm run start && cd ..",
-    "build": "cd Server && npm run build && cd ../Calling && npm run build && cd .."
+    "build": "cd Server && npm run build && cd ../Calling && npm run build && cd ..",
+    "package": "cd Calling && npm run package && cd .."
   },
   "repository": {
     "type": "git",
