--- a/Server/package.json
+++ b/Server/package.json
@@ -11,8 +11,8 @@
     "start:debug": "node --inspect=9229 -r ts-node/register ./bin/www",
     "test": "jest",
     "test:stable": "echo skip",
-    "prettier": "prettier --no-error-on-unmatched-pattern --write --config ../../.prettierrc --ignore-path=../../.prettierignore \"**/*.js\" \"**/*.jsx\" \"**/*.ts\" \"**/*.tsx\"",
-    "prettier:check": "prettier --no-error-on-unmatched-pattern --check --config ../../.prettierrc --ignore-path=../../.prettierignore \"**/*.js\" \"**/*.jsx\" \"**/*.ts\" \"**/*.tsx\"",
+    "prettier": "prettier --no-error-on-unmatched-pattern --write --config ../.prettierrc --ignore-path=../.prettierignore \"**/*.js\" \"**/*.jsx\" \"**/*.ts\" \"**/*.tsx\"",
+    "prettier:check": "prettier --no-error-on-unmatched-pattern --check --config ../.prettierrc --ignore-path=../.prettierignore \"**/*.js\" \"**/*.jsx\" \"**/*.ts\" \"**/*.tsx\"",
     "lint": "eslint */**/*.{ts,tsx}",
     "lint:fix": "eslint */**/*.{ts,tsx} --fix",
     "lint:quiet": "eslint */**/*.{ts,tsx} --quiet"
@@ -41,7 +41,7 @@
     "@types/node": "^14.14.10",
     "@types/supertest": "^2.0.10",
     "@types/webpack-node-externals": "^2.5.0",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^4.12.0",
     "copy-webpack-plugin": "^6.4.0",
     "eslint": "^7.7.0",
