--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,5 +60,5 @@ jobs:
         run: npm run prettier:check
 
       - name: Build
-        working-directory: ./
+        working-directory: ./Calling
         run: npm run build
