CI scripts all work (#112)
* Update ci.yml

* Update ci.yml

* adding in www.ts file

* adding in prettier and eslint scripts

* moving prettier config files into calling dir

* fix prettier location in calling package json

* fixing location of prettier config files

* building in the calling dir

* fixing rm command in release creationg

* not removing the zip file

* removing dist directory after building and setting up correct repo to deploy from

* fixing deploy button url

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Server dependencies
         working-directory: ./Server
         run: |
-          npm run install
+          npm install
 
       - name: Build backend
         working-directory: ./Server
@@ -60,5 +60,5 @@ jobs:
         run: npm run prettier:check
 
       - name: Build
-        working-directory: ./
+        working-directory: ./Calling
         run: npm run build
