Fixing CI, scripts, readme and code to reference the UI Library (#114)
* Update ci.yml

* Update ci.yml

* adding in www.ts file

* adding in prettier and eslint scripts

* moving prettier config files into calling dir

* fix prettier location in calling package json

* fixing location of prettier config files

* building in the calling dir

* fixing rm command in release creationg

* not removing the zip file

* removing dist directory after building and setting up correct repo to deploy from

* fixing deploy button url

* Update azuredeploy.json

* updating calling sample readme and scripts

* Update azuredeploy.json

--- a/Server/package.json
+++ b/Server/package.json
@@ -3,16 +3,14 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "npm run clean && webpack",
-    "build:stable": "echo skip",
+    "build": "npm run clean && webpack --mode=production --env production",
     "clean": "rimraf dist",
     "start": "ts-node ./bin/www",
     "start:dev": "ts-node-dev ./bin/www",
     "start:debug": "node --inspect=9229 -r ts-node/register ./bin/www",
     "test": "jest",
-    "test:stable": "echo skip",
-    "prettier": "prettier --no-error-on-unmatched-pattern --write --config ../.prettierrc --ignore-path=../.prettierignore \"**/*.js\" \"**/*.jsx\" \"**/*.ts\" \"**/*.tsx\"",
-    "prettier:check": "prettier --no-error-on-unmatched-pattern --check --config ../.prettierrc --ignore-path=../.prettierignore \"**/*.js\" \"**/*.jsx\" \"**/*.ts\" \"**/*.tsx\"",
+    "prettier": "prettier --no-error-on-unmatched-pattern --write --config ./.prettierrc --ignore-path=./.prettierignore \"**/*.js\" \"**/*.jsx\" \"**/*.ts\" \"**/*.tsx\"",
+    "prettier:check": "prettier --no-error-on-unmatched-pattern --check --config ./.prettierrc --ignore-path=./.prettierignore \"**/*.js\" \"**/*.jsx\" \"**/*.ts\" \"**/*.tsx\"",
     "lint": "eslint */**/*.{ts,tsx}",
     "lint:fix": "eslint */**/*.{ts,tsx} --fix",
     "lint:quiet": "eslint */**/*.{ts,tsx} --quiet"
