commiting suggestions specific for this sample code in this repo

--- a/Calling/common.tsconfig.json
+++ b/Calling/common.tsconfig.json
@@ -7,7 +7,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "strict": true,
-    "noImplicitAny": false, // disable for now for storybook
+    "noImplicitAny": false,
     "strictFunctionTypes": true,
     "noUnusedLocals": true,
     "noImplicitReturns": true,
