--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -7,5 +7,6 @@
     }
   },
   "AllowedHosts": "*",
-  "ResourceConnectionString": "REPLACE_WITH_CONNECTION_STRING"
+  "ResourceConnectionString": "REPLACE_WITH_CONNECTION_STRING",
+  "EndpointUrl":"REPLACE_WITH_ENDPOINT_URL"
 }
