--- a/Server/package.json
+++ b/Server/package.json
@@ -2,6 +2,7 @@
   "name": "server",
   "version": "0.0.1",
   "private": true,
+  "description": "This is the server side that supports all ACS sample applications",
   "scripts": {
     "build": "npm run clean && webpack --mode=production --env production",
     "clean": "rimraf dist",
