--- a/Calling/package.json
+++ b/Calling/package.json
@@ -18,20 +18,21 @@
     "lint:quiet": "eslint */**/*.{ts,tsx} --quiet"
   },
   "dependencies": {
-    "@azure/communication-calling": "1.3.2",
+    "@azure/communication-calling": "1.4.4",
+    "@azure/communication-chat": "1.1.0",
     "@azure/communication-common": "1.1.0",
     "@azure/communication-identity": "1.0.0",
-    "@azure/communication-react": "1.0.0",
+    "@azure/communication-react": "1.2.0",
     "@azure/core-http": "1.2.4",
     "@babel/preset-react": "^7.12.7",
-    "@fluentui/react": "~8.17.2",
+    "@fluentui/react": "8.66.1",
     "@fluentui/react-icons": "~1.1.137",
     "@webpack-cli/serve": "^1.6.0",
     "jquery": "^3.5.1",
     "merge": "^2.1.1",
     "mobile-detect": "~1.4.5",
-    "react": "~16.14.0",
-    "react-dom": "16.13.1",
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
     "react-router-dom": "^5.1.2",
     "reactstrap": "^8.4.1",
     "reselect": "~4.0.0",
@@ -43,8 +44,8 @@
     "@testing-library/react-hooks": "^3.4.2",
     "@types/jest": "~26.0.22",
     "@types/node": "^14.14.10",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
