--- a/Calling/package.json
+++ b/Calling/package.json
@@ -73,7 +73,7 @@
     "jest-junit": "~13.0.0",
     "prettier": "2.3.1",
     "pretty-quick": "^3.1.0",
-    "react-test-renderer": "^16.14.0",
+    "react-test-renderer": "17.0.0",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^2.5.0",
     "style-loader": "~2.0.0",
