--- a/Calling/package.json
+++ b/Calling/package.json
@@ -18,8 +18,8 @@
     "lint:quiet": "eslint */**/*.{ts,tsx} --quiet"
   },
   "dependencies": {
-    "@azure/communication-calling": "1.4.4",
-    "@azure/communication-chat": "1.2.0",
+    "@azure/communication-calling": "^1.5.4",
+    "@azure/communication-chat": "^1.2.1",
     "@azure/communication-common": "2.0.0",
     "@azure/communication-identity": "1.0.0",
     "@azure/communication-react": "1.3.0",
