--- a/Server/package.json
+++ b/Server/package.json
@@ -17,9 +17,10 @@
     "lint:quiet": "eslint */**/*.{ts,tsx} --quiet"
   },
   "dependencies": {
-    "@azure/communication-chat": "1.2.0",
+    "@azure/communication-chat": "^1.2.1",
     "@azure/communication-common": "2.0.0",
     "@azure/communication-identity": "1.0.0",
+    "@azure/core-http": "1.2.4",
     "@types/cors": "^2.8.8",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -27,8 +28,7 @@
     "eslint-plugin-header": "^3.1.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "@azure/core-http": "1.2.4"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
