--- a/Calling/package.json
+++ b/Calling/package.json
@@ -24,16 +24,20 @@
     "@azure/communication-identity": "1.0.0",
     "@azure/communication-react": "1.3.0",
     "@azure/core-http": "1.2.4",
+    "@azure/logger": "1.0.3",
     "@babel/preset-react": "^7.12.7",
-    "@fluentui/react": "8.66.1",
     "@fluentui/react-icons": "~1.1.137",
+    "@fluentui/react": "8.66.1",
     "@webpack-cli/serve": "^1.6.0",
+    "follow-redirects": "1.14.8",
     "jquery": "^3.5.1",
     "merge": "^2.1.1",
     "mobile-detect": "~1.4.5",
-    "react": "17.0.0",
+    "nanoid": "3.1.32",
+    "node-fetch": "2.6.7",
     "react-dom": "17.0.0",
     "react-router-dom": "^5.1.2",
+    "react": "17.0.0",
     "reactstrap": "^8.4.1",
     "reselect": "~4.0.0",
     "uuid": "^8.1.0"
