Getting token value from appSettings.json

--- a/Calling/appsettings.json
+++ b/Calling/appsettings.json
@@ -14,5 +14,6 @@
   "LogBlobContainerName": "REPLACE_WITH_CONTAINER_NAME",
   "CallbackUri": "http://localhost:3000/",
   "RecordingBlobStorageConnectionString": "REPLACE_WITH_RECORDING_STORAGE_CONNECTION_STRING",
-  "RecordingContainerName": "REPLACE_WITH_RECORDING_BLOB_CONTAINER_NAME"
+  "RecordingContainerName": "REPLACE_WITH_RECORDING_BLOB_CONTAINER_NAME",
+  "CallToken": "CALL_TOKEN"
 }
