Adding unit test to ensure reqd field available

--- a/Server/tsconfig.json
+++ b/Server/tsconfig.json
@@ -15,6 +15,7 @@
     "typeRoots": [
       "./node_modules/@types"
     ],
+    "resolveJsonModule": true,
   },
   "include": ["src", "bin"],
   "exclude": [
