--- a/Calling/package.json
+++ b/Calling/package.json
@@ -18,19 +18,17 @@
     "lint:quiet": "eslint */**/*.{ts,tsx} --quiet"
   },
   "dependencies": {
-    "@azure/communication-calling": "1.4.4",
-    "@azure/communication-chat": "1.2.0",
+    "@azure/abort-controller": "^1.0.0",
+    "@azure/communication-calling": ">=1.4.4",
+    "@azure/communication-chat": ">=1.2.0",
     "@azure/communication-common": "2.0.0",
-    "@azure/communication-identity": "1.0.0",
-    "@azure/communication-react": "1.3.1",
-    "@azure/core-http": "1.2.4",
+    "@azure/communication-identity": "~1.1.0",
+    "@azure/communication-react": "1.4.0",
     "@azure/logger": "1.0.3",
     "@babel/preset-react": "^7.12.7",
-    "@fluentui/react-icons": "~1.1.137",
-    "@fluentui/react": "8.66.1",
-    "@webpack-cli/serve": "^1.6.0",
+    "@fluentui/react-icons": "~1.1.145",
+    "@fluentui/react": "~8.98.3",
     "follow-redirects": "1.14.8",
-    "jquery": "^3.5.1",
     "merge": "^2.1.1",
     "mobile-detect": "~1.4.5",
     "nanoid": "3.1.32",
