--- a/Calling/tsconfig.json
+++ b/Calling/tsconfig.json
@@ -5,6 +5,6 @@
     "baseUrl": "./src"
   },
   "typeRoots": ["./node_modules/@types"],
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/assets/assets.d.ts"],
   "exclude": ["dist", "node_modules"]
 }
