--- a/Calling/package.json
+++ b/Calling/package.json
@@ -19,8 +19,7 @@
   },
   "dependencies": {
     "@azure/abort-controller": "^1.0.0",
-    "@azure/communication-calling": ">=1.13.1",
-    "@azure/communication-chat": ">=1.2.0",
+    "@azure/communication-calling": "^1.13.1",
     "@azure/communication-common": "2.2.0",
     "@azure/communication-identity": "~1.1.0",
     "@azure/communication-react": "1.5.0",
@@ -80,7 +79,7 @@
     "source-map-explorer": "^2.5.0",
     "style-loader": "~2.0.0",
     "ts-loader": "^8.0.12",
-    "typescript": "4.3.5",
+    "typescript": "^4.3.5",
     "url-loader": "~4.1.1",
     "webpack": "5.76.0",
     "webpack-cli": "^4.7.2",
