--- a/Calling/package.json
+++ b/Calling/package.json
@@ -58,7 +58,7 @@
     "concurrently": "^5.3.0",
     "copyfiles": "^2.4.1",
     "cross-env": "~7.0.3",
-    "css-loader": "~4.3.0",
+    "css-loader": "^6.8.1",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-config-react-app": "^6.0.0",
@@ -82,7 +82,7 @@
     "ts-loader": "^8.0.12",
     "typescript": "4.3.5",
     "url-loader": "~4.1.1",
-    "webpack": "5.61.0",
+    "webpack": "^5.89.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "4.8.1"
   }
