--- a/Calling/package.json
+++ b/Calling/package.json
@@ -19,18 +19,19 @@
   },
   "dependencies": {
     "@azure/abort-controller": "^1.1.0",
-    "@azure/communication-calling": "^1.18.1",
-    "@azure/communication-common": "^2.2.1",
-    "@azure/communication-identity": "^1.2.0",
-    "@azure/communication-react": "^1.10.0",
-    "@azure/logger": "1.0.4",
+    "@azure/communication-calling": "^1.19.1",
+    "@azure/communication-common": "^2.3.0",
+    "@azure/communication-identity": "^1.3.0",
+    "@azure/communication-react": "^1.11.0",
+    "@azure/core-util": "1.5.0",
+    "@azure/logger": "^1.0.4",
     "@babel/preset-react": "^7.12.7",
-    "@fluentui/react": "~8.110.4",
-    "@fluentui/react-hooks": "~8.6.12",
-    "@fluentui/react-icons": "~2.0.194",
+    "@fluentui/react": "^8.112.9",
+    "@fluentui/react-hooks": "^8.6.33",
+    "@fluentui/react-icons": "^2.0.223",
     "follow-redirects": "1.14.8",
     "merge": "^2.1.1",
-    "mobile-detect": "~1.4.5",
+    "mobile-detect": "^1.4.5",
     "nanoid": "3.3.6",
     "node-fetch": "2.6.7",
     "react": "18.2.0",
