--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,7 @@
     "@azure/communication-chat": "1.2.0",
     "@azure/communication-common": "2.0.0",
     "@azure/communication-identity": "1.0.0",
+    "@azure/communication-rooms": "1.0.0",
     "@types/cors": "^2.8.8",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
