--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,15 +9,16 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    permissions: read-all
     steps:
     
       - name: Checkout
         uses: actions/checkout@v1
 
-      - name: Setup Node 16
+      - name: Setup Node 20
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '20'
 
       - name: Build
         shell: bash
