--- a/Calling/package.json
+++ b/Calling/package.json
@@ -22,7 +22,7 @@
     "@azure/communication-calling": "^1.23.2",
     "@azure/communication-common": "^2.3.0",
     "@azure/communication-identity": "^1.3.0",
-    "@azure/communication-react": "^1.14.0",
+    "@azure/communication-react": "^1.15.0",
     "@azure/core-util": "1.5.0",
     "@azure/logger": "^1.0.4",
     "@babel/preset-react": "^7.12.7",
@@ -39,8 +39,8 @@
     "react-router-dom": "^5.1.2",
     "reactstrap": "^8.4.1",
     "reselect": "~4.0.0",
-    "uuid": "^9.0.0",
-    "shake.js": "1.2.2"
+    "shake.js": "1.2.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.16.0",
@@ -58,6 +58,7 @@
     "babel-jest": "^29.5.0",
     "babel-loader": "8.1.0",
     "concurrently": "^5.3.0",
+    "copy-webpack-plugin": "^12.0.2",
     "copyfiles": "^2.4.1",
     "cross-env": "~7.0.3",
     "css-loader": "~4.3.0",
@@ -84,8 +85,8 @@
     "ts-loader": "^8.0.12",
     "typescript": "^4.3.5",
     "url-loader": "~4.1.1",
-    "webpack": "5.76.0",
-    "webpack-cli": "^4.7.2",
+    "webpack": "5.89.0",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "4.8.1"
   }
 }
