--- a/Calling/package.json
+++ b/Calling/package.json
@@ -17,28 +17,27 @@
     "lint:fix": "eslint **/*.{ts,tsx} --fix",
     "lint:quiet": "eslint **/*.{ts,tsx} --quiet"
   },
+  "license": "MIT",
   "dependencies": {
     "@azure/abort-controller": "^1.1.0",
     "@azure/communication-calling": "^1.26.1",
     "@azure/communication-common": "^2.3.1",
     "@azure/communication-identity": "^1.3.0",
-    "@azure/communication-react": "^1.17.0",
-    "@azure/core-util": "1.5.0",
+    "@azure/communication-react": "1.18.0",
     "@azure/logger": "^1.0.4",
     "@babel/preset-react": "^7.12.7",
     "@fluentui/react": "^8.117.1",
     "@fluentui/react-hooks": "^8.7.0",
-    "@fluentui/react-icons": "^2.0.239",
-    "follow-redirects": "1.15.4",
+    "@fluentui/react-icons": "^2.0.245",
+    "follow-redirects": "1.15.3",
     "merge": "^2.1.1",
     "mobile-detect": "^1.4.5",
     "nanoid": "3.3.6",
     "node-fetch": "2.6.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-router-dom": "^5.1.2",
-    "reactstrap": "^8.4.1",
-    "reselect": "~4.0.0",
+    "reselect": "^4.0.0",
     "shake.js": "1.2.2",
     "uuid": "^9.0.0"
   },
