--- a/Server/package.json
+++ b/Server/package.json
@@ -60,7 +60,7 @@
     "ts-loader": "^8.0.12",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.0.0",
-    "typescript": "4.3.5",
+    "typescript": "^5.6.2",
     "webpack": "5.76.0",
     "webpack-cli": "4.7.2",
     "webpack-node-externals": "^2.5.2"
