--- a/Calling/package.json
+++ b/Calling/package.json
@@ -84,7 +84,7 @@
     "ts-loader": "^8.0.12",
     "typescript": "^4.3.5",
     "url-loader": "~4.1.1",
-    "webpack": "5.89.0",
+    "webpack": ">=5.94.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "4.8.1"
   }
