service api is enabled

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@azure/functions": "^4.0.0-alpha.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^22.8.1"
+  },
   "main": "src/functions/*.js"
 }
