--- a/Server/package.json
+++ b/Server/package.json
@@ -20,6 +20,7 @@
     "@azure/communication-chat": "1.2.0",
     "@azure/communication-common": "2.0.0",
     "@azure/communication-identity": "1.0.0",
+    "@azure/core-http": "1.2.4",
     "@types/cors": "^2.8.8",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -27,8 +28,7 @@
     "eslint-plugin-header": "^3.1.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1",
-    "@azure/core-http": "1.2.4"
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -37,7 +37,7 @@
     "@types/http-errors": "^1.8.0",
     "@types/jest": "~26.0.22",
     "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.10",
+    "@types/node": "^14.18.63",
     "@types/supertest": "^2.0.10",
     "@types/webpack-node-externals": "^2.5.0",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
